--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -11,7 +11,13 @@ html(lang="en")
             h1 Noom!
         
         main 
-            h2 Welcome to Noom
-        
+            form#nick
+                input(type='text', placeholder = '닉네임을 선택해주세요' , required)
+                button Save 
+
+            ul
+            form#message
+                input(type='text', placeholder = '메세지를 입력해주세요' , required)
+                button Send
 
         script(src="/public/js/index.js")
