socket.IO 2.4ver

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -11,13 +11,17 @@ html(lang="en")
             h1 Noom!
         
         main 
-            form#nick
-                input(type='text', placeholder = '닉네임을 선택해주세요' , required)
-                button Save 
+            div#welcome 
+                form 
+                    input(placeholder = '방 이름', required, type = 'text')
+                    button 입장
 
-            ul
-            form#message
-                input(type='text', placeholder = '메세지를 입력해주세요' , required)
-                button Send
+            div#room
+                h3 
+                ul 
+                form 
+                    input(placeholder = '메세지', required, type = 'text')
+                    button 입력
 
+        script(src="/socket.io/socket.io.js")
         script(src="/public/js/index.js")
